# geoxiao

./: .env.example  .gitignore  Cargo.toml  Geoxiao_Codex_Execution_Manual.docx  Geoxiao_Fase2_CoreAlgorithm_Blueprint.docx  Geoxiao_Master_Blueprint.docx  check_env.py  docker-compose.yml  pyproject.toml
config/: default.toml
migrations/: 001_initial_schema.sql
python/: optuna_bridge.py
scripts/: bootstrap_wsl_env.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/analytics/: metrics_calculator.py
src/backtest/: backtest_runner.py  clickhouse_evaluator.py  engine.rs  filter.rs  log_sync.py  mod.rs  nautilus_adapter.py  nautilus_strategy_wrapper.py  noise_injection.rs  walk_forward.rs
src/config/: logging.py  settings.py
src/dashboard/: api.rs  mod.rs  server.rs  telemetry.rs
src/data/: clickhouse.rs  mod.rs  postgres.rs  retry.py  schema_bootstrap.py  types.rs
src/data/migrations/: 001_initial_schema.sql  env.py
src/data/repositories/: __init__.py  base.py  strategy_repo.py  trade_repo.py  trial_repo.py
src/evolution/: base.py  export.rs  fitness.py  fitness.rs  gp_generator.py  mod.rs  optuna_tuner.py  orchestrator.rs  persistence.py  primitives.py
src/features/: density.rs  higher_moments.rs  hurst.rs  mod.rs  momentum.rs  obi.rs  pipeline.rs  spread.rs  tick_velocity.rs  volume_skew.rs
src/gp/: ast.rs  bayesian.rs  diversity.rs  gpu.rs  mod.rs  operators.rs  population.rs
src/scripts/: dashboard.py  run_evolution.py  verify_data.py
src/strategy/: base_strategy.py  signal_utils.py
tests/unit/: test_clickhouse_evaluator.py  test_deap_generator.py  test_optuna_tuner.py  test_primitives.py  test_repositories.py
