[package]
name = "esse"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
tokio = { version = "1.37", features = ["full", "tracing"] }
clickhouse = { version = "0.13.3", features = ["rustls-tls", "lz4", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
thiserror = "1.0"
anyhow = "1.0"
config = { version = "0.14", features = ["toml"] }
futures = "0.3"
tokio-stream = "0.1"
rand = "0.8"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
rayon = "1.10"
cudarc = { version = "0.19.6", optional = true, default-features = false, features = ["std", "driver", "dynamic-loading", "cuda-version-from-build-system"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "json", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[features]
default = ["cpu"]
cpu = []
gpu-cuda = ["dep:cudarc"]
sqlx-checked = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = false

[profile.test]
incremental = false
